[project]
name = "wanda-bin"
description = "Container image builder with content-addressed registry caching"
requires-python = ">=3.8"
dynamic = ["version"]

[build-system]
requires = [
    "pdm-backend",
    "tomli; python_version < '3.11'",  # tomllib added to stdlib in 3.11
]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "VERSION"

[tool.pdm.build]
is-purelib = false
source-includes = []
excludes = [
    "bin/*",
    "*.py",
    "*_test.py",
    "!wanda_bin/__init__.py",
    ".gitignore",
    "VERSION",
]

[tool.pdm.build.wheel-data]
scripts = ["${BUILD_DIR}/bin/*"]

[tool.wanda]
bin_name = "wanda"
